product card changes

--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -12,7 +12,8 @@
     "next": "15.0.2",
     "node.js": "^0.0.1-security",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
